--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="repo.html">Jailbreak Repo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="animations.html">CSS Animations</a>
+                        <a class="nav-link" href="animations.html" title="A collection of animations I've made with CSS.">CSS Animations</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/Guzzler829/">GitHub Page</a>
